--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,37 +1,37 @@
 name: Robot Framework Tests
 
 on:
-  push:
-    branches: [ main, robot ]
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [main, robot]
+    pull_request:
+        branches: [main]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-    
-    - name: Run Robot Framework tests
-      run: |
-        robot testCases/
-    
-    - name: Upload test results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: robot-results
-        path: |
-          log.html
-          report.html
-          output.xml
+    test:
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v3
+
+            - name: Set up Python
+              uses: actions/setup-python@v4
+              with:
+                  python-version: "3.11"
+
+            - name: Install dependencies
+              run: |
+                  pip install -r requirements.txt
+
+            - name: Run Robot Framework tests
+              run: |
+                  robot testCases/
+
+            - name: Upload test results
+              if: always()
+              uses: actions/upload-artifact@v3
+              with:
+                  name: robot-results
+                  path: |
+                      log.html
+                      report.html
+                      output.xml
