--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,16 @@ jobs:
               run: |
                   pip install -r requirements.txt
 
+            - name: Install Chrome
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install -y google-chrome-stable
+
             - name: Run Robot Framework tests
               run: |
                   robot testCases/
+              env:
+                  DISPLAY: :99
 
             - name: Upload test results
               if: always()
