feat: create test for robot

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,17 @@
+# Auto detect text files and normalize line endings to LF
 * text=auto eol=lf
-*.{cmd,[cC][mM][dD]} text eol=crlf
-*.{bat,[bB][aA][tT]} text eol=crlf
+
+# Explicitly declare text files
+*.resource text eol=lf
+*.robot text eol=lf
+*.json text eol=lf
+*.py text eol=lf
+*.md text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+
+# Denote binary files
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
