--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
 
             - name: Run Robot Framework tests
               run: |
-                  robot --variable BROWSER:headlesschrome testCases/flow/test.robot
+                  robot --variable BROWSER:headlesschrome --variable TIMEOUT:10s testCases/flow/test.robot
 
             - name: Upload test results
               if: always()
